--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             </li>
                             <li>
                                 <span class="info-label" data-i18n="mothers-occupation ">Mother's Occupation</span>
-                                <span class="info-value" data-i18n="">--<span>
+                                <span class="info-value" data-i18n="Tanda_Sudhar_Samiti_Sadasya">Tanda Sudhar Samiti Sadasya<span>
                             </li>
                             <li>
                                 <span class="info-label" data-i18n="brothers-name">Brother's Name</span>
@@ -384,6 +384,7 @@
                     was_a_teacher_zp_highschool: "Was a Teacher, ZP High School, M.Pir",
                     mothers_name: "Mother's Name",
                     sunita_kishor_jadhao: "Sunita Kishor Jadhao",
+                    Tanda_Sudhar_Samiti_Sadasya:"Tanda Sudhar Samiti Sadasya",
                     mothers_occupation: "",
                     brothers_name: "Brother's Name",
                     kanhaiyya_kishor_jadhao: "Kanhaiyya Kishor Jadhao",
@@ -458,6 +459,7 @@
                     "was-a-teacher-zp-highschool": "जि.प. हायस्कूल, म. पिर",
                     "mothers-name": "आईचे नाव",
                     "sunita-kishor-jadhao": "सुनिता किशोर जाधव",
+                    Tanda_Sudhar_Samiti_Sadasya:"तांडा सुधार समिती सदस्य",
                     "mothers-occupation": "",
                     "brothers-name": "भावाचे नाव",
                     "kanhaiyya-kishor-jadhao": "कन्हैय्या किशोर जाधव",
