--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                     "was-a-teacher-zp-highschool": "जि.प. हायस्कूल, म. पिर",
                     "mothers-name": "आईचे नाव",
                     "sunita-kishor-jadhao": "सुनिता किशोर जाधव",
-                    Tanda_Sudhar_Samiti_Sadasya:"तांडा सुधार समिती सदस्य",
+                    "Tanda_Sudhar_Samiti_Sadasya":"तांडा सुधार समिती सदस्य",
                     "mothers-occupation": "",
                     "brothers-name": "भावाचे नाव",
                     "kanhaiyya-kishor-jadhao": "कन्हैय्या किशोर जाधव",
