--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="nav-content">
             <div class="logo" style="font-family: Yatra One;">Portfolio</div>
             <div class="nav-links">
-                <a href="wa.me/+918888151997">Contact</a>
+                <a href="https://api.whatsapp.com/send/?phone=%2B918888151997&text&type=phone_number&app_absent=0">Contact</a>
             </div>
         </div>
     </nav>
@@ -45,7 +45,7 @@
             <h1><span id="rohan" style="color: silver;">Rohan</span> Kishor Jadhao</h1>
             <p data-i18n="Software Engineer-Investor-Trader-Musician" >Software Engineer | Investor-Trader | Musician</p>
             <div class="email-section">
-                <button onclick="createSparkles(event); setTimeout(() => window.location.href='wa.me/+918888151997', 2000)"
+                <button onclick="createSparkles(event); setTimeout(() => window.location.href='https://api.whatsapp.com/send/?phone=%2B918888151997&text&type=phone_number&app_absent=0', 2000)"
                     class="button-55">
                     Contact Me
                 </button>
@@ -460,7 +460,7 @@
                     "mothers-name": "आईचे नाव",
                     "sunita-kishor-jadhao": "सुनिता किशोर जाधव",
                     "Tanda_Sudhar_Samiti_Sadasya":"तांडा सुधार समिती सदस्य",
-                    "mothers-occupation": "",
+                    "mothers-occupation": "आईचे व्यवसाय",
                     "brothers-name": "भावाचे नाव",
                     "kanhaiyya-kishor-jadhao": "कन्हैय्या किशोर जाधव",
                     "brothers-education": "भावाचे शिक्षण",
